Added files via upload

--- a/room.html
+++ b/room.html
@@ -25,7 +25,7 @@
   <scene>
 <Viewpoint id="front" position="-0.07427 0.95329 -2.79608" orientation="-0.01451 0.99989 0.00319 3.15833" description="camera"></Viewpoint>
 
-  <!--left wall -->
+  <!--left wall !!!!!-->
     <transform translation="-4 0 -20" scale="0.2,3,5"> 
    	  <shape>
         <appearance>
